# Artificial-Neural-Network

./: README.md  pyproject.toml
src/: Danny.ipynb  Deyan.ipynb  Drago.ipynb  FINAL.ipynb  Group_00_classes.txt  Main copy.ipynb  Main.ipynb  Toolbox.ipynb  XX_classes.txt  Zain.ipynb
